[package]
name = "ports-box"
version = "0.1.1"
edition = "2024"
description = "Port forwarder with per-user traffic quotas"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "signal", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
json5 = "0.4"
serde_yaml_ng = "0.10"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
rusqlite = { version = "0.37", features = ["bundled"] }
hickory-resolver = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
lto = true
strip = true
